# researcher-opportunity-matcher

./: README.md  proj_plan.md  pyproject.toml
.github/workflows/: ci.yml
backend/: run_connectors.py
backend/connectors/: ckan_connector.py  nrfu_scraper.py
backend/ingest/: ingest_to_sqlite.py
data/: nrfu_contest_sample_1.json  nrfu_contest_sample_2.json  nrfu_contest_sample_wp.json
docs/: harvest_steps.md
tests/: run_manual_tests.py  test_ckan_normalize.py  test_nrfu_normalize.py
